# hips

./: .gitignore  CMakeLists.txt  LICENSE  README.md  todo
.githooks/: pre-push
build_make/: .make.IGNITE.swp  Makefile  README  make.BOB  make.FSL  make.IGNITE  make.MAC  make.OMEN  make.SPARK
cmake_build/: CMakeCache.txt  Makefile  README  cmake_install.cmake  user_config
cmake_build/cvode/: Makefile  cmake_install.cmake
cmake_build/domaincases/: Makefile  cmake_install.cmake
cmake_build/domainvariables/: Makefile  cmake_install.cmake
cmake_build/hips/: Makefile  cmake_install.cmake
cmake_build/user_chemical_mechanisms/: Makefile  cmake_install.cmake
data/reference/: README.md
doc/: Doxyfile  documentation_online.html
doc/doxygen_build_pages/: mainpage.doxy
docker/: Dockerfile
docs/: CMakeLists.txt  Diagram-paper.pptx  Doxyfile  Doxyfile.in  DoxygenLayout.xml  hips-ref.bib  mainpage-bkp.md  mainpage.md
docs/doxygen/html/: MersenneTwister_8h.html  MersenneTwister_8h.js  MersenneTwister_8h_source.html  _mersenne_twister_8h.html  _mersenne_twister_8h.js  _mersenne_twister_8h_source.html  annotated.html  annotated_dup.js  batchReactor_8h.html  batchReactor_8h_source.html  batchReactor__cantera_8cc.html  batchReactor__cantera_8cc_source.html  batchReactor__cantera_8h.html  batchReactor__cantera_8h_source.html  batchReactor__cvode_8cc.html  batchReactor__cvode_8cc.js  batchReactor__cvode_8cc_source.html  batchReactor__cvode_8h.html  batchReactor__cvode_8h_source.html  batch_reactor_8h.html  batch_reactor_8h.js  batch_reactor_8h_source.html  batch_reactor__cantera_8cc.html  batch_reactor__cantera_8cc_source.html  batch_reactor__cantera_8h.html  batch_reactor__cantera_8h.js  batch_reactor__cantera_8h_source.html  batch_reactor__cvode_8cc.html  batch_reactor__cvode_8cc.js  batch_reactor__cvode_8cc_source.html  batch_reactor__cvode_8h.html  batch_reactor__cvode_8h.js  batch_reactor__cvode_8h_source.html  classMTRand-members.html  classMTRand.html  classMTRand.js  class_m_t_rand-members.html  class_m_t_rand.html  class_m_t_rand.js  classbatchReactor-members.html  (+120 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  (+49 more)
docs/doxygen/latex/: MersenneTwister_8h.tex  _mersenne_twister_8h.tex  _mersenne_twister_8h_source.tex  annotated.tex  batchReactor_8h.tex  batchReactor__cantera_8cc.tex  batchReactor__cantera_8h.tex  batchReactor__cvode_8cc.tex  batchReactor__cvode_8h.tex  batch_reactor_8h.tex  batch_reactor_8h_source.tex  batch_reactor__cantera_8cc.tex  batch_reactor__cantera_8cc_source.tex  batch_reactor__cantera_8h.tex  batch_reactor__cantera_8h_source.tex  batch_reactor__cvode_8cc.tex  batch_reactor__cvode_8cc_source.tex  batch_reactor__cvode_8h.tex  batch_reactor__cvode_8h_source.tex  classMTRand.tex  class_m_t_rand.tex  classbatchReactor.tex  classbatchReactor__cantera.tex  classbatchReactor__cvode.tex  classbatch_reactor.tex  classbatch_reactor__cantera.tex  classbatch_reactor__cvode.tex  classcvodeDriver.tex  classcvodeDriver__inherit__graph.md5  clasships.tex  classintegrator__cvode.tex  classrandomGenerator.tex  classrandom_generator.tex  classstreams.tex  computational__cost_8md.tex  computational_cost.tex  cvodeDriver_8cc.tex  cvodeDriver_8h.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_72971c45976600dd4ad45a6a4f3f2ddc.tex  (+36 more)
docs/model/: model-description.md
docs/pages/: Examples.md  examples.md
docs/python/: README
docs/results/: test.md
examples/: CMakeLists.txt  ex_1.cc  ex_2.cc  ex_3.cc
examples/examples-bkp/: ex_1.cc  ex_2.cc  ex_3.cc
input/MFjetFlame/: input.yaml
input/axialAnnulusFlow/: README  input.yaml
input/channelFlow/: input.yaml
input/channelScalar/: input.yaml
input/coldPropaneJet/: input.yaml
input/flmlt/: input.yaml
post/: .gitignore  README.md  pdf_chi.py  stats.py  utils.py
run/: .gitignore  runManyRlz.sh  runOneRlz.sh  slrmJob.sh  slrmJob_array.sh
source/: CMakeLists.txt  cantera_shell_functions.cc  cantera_shell_functions.h  cvodeDriver.cc  cvodeDriver.h  domain.cc  domain.h  driver.cc  hips.cc  hips.h  inputoutput.cc  inputoutput.h  main.cc  micromixer.cc  micromixer.h  param.cc  param.h  probes.cc  probes.h  processor.cc  processor.h  randomGenerator.h  solver.cc  solver.h  streams.h
source/cvode/: CMakeLists.txt
source/domaincases/: CMakeLists.txt  domaincase.cc  domaincase.h  domaincase_hips_simpleRxn.cc  domaincase_hips_soot.h
source/domainvariables/: CMakeLists.txt  dv.cc  dv.h  dv_dvisc.cc  dv_dvisc.h  dv_enth_hips.cc  dv_mixf_hips.cc  dv_rho.cc  dv_rho.h  dv_temp.cc  dv_temp.h  dv_ygas_hips.cc
source/hips/: CMakeLists.txt  domaincase_hips.cc  domaincase_hips_comb.cc  domaincase_hips_simpleRxn.cc  domaincase_hips_soot.cc  dv_chi_hips.cc  dv_chi_hips.h  dv_enth_hips.cc  dv_mixf_hips.cc  dv_ygas_cold_hips.cc  dv_ygas_hips.cc  dv_ygas_hips.h  hips.py  micromixer_hips.cc  solver_hips.cc
source/user_chemical_mechanisms/: CMakeLists.txt
src/: 1  CMakeCache.txt  CMakeLists.txt  Integrator.h  batchReactor.h  batchReactor_cantera.cc  batchReactor_cantera.h  batchReactor_cvode.cc  batchReactor_cvode.h  cvodeDriver.cc  cvodeDriver.h  domain.cc  domain.h  driver.cc  hips.cc  hips.h  hipsConfig.cmake  inputoutput.cc  inputoutput.h  integrator_cvode.h  interp_linear.h  main.cc  micromixer.cc  param.cc  randomGenerator.h  streams.cc  streams.h
src/ch4_two_step/: 2S_CH4_BFER.cti  2S_CH4_BFER.yaml
src/ch4_two_step/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/domainvariables/: dv.h  dv_dvisc.cc
src/hips/: CMakeLists.txt  domaincase_hips_soot.cc  solver_hips.h
src/user_chemical_mechanisms/: onestep_c2h4.cc
test/: CMakeLists.txt  test.cc  test_rxn.cc
(+19 files in other folders)
